--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -628,15 +628,21 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
             background-size: auto;
             width: 20%;
             height: 20%;
+            display: -webkit-flexbox;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-flex-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+            text-align: center;
         }
 
         .price {
-            position: absolute;
             width: 100%;
             text-align: center;
-            font-size: 12px;
             color: white;
-            top: 25%;
         }
 
         &.big {
@@ -646,10 +652,6 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
                 top: 15px;
                 left: 15px;
             }
-            .price {
-                font-size: 24px;
-                top: 30%;
-            } 
         }
         &.medium {
             .pricetag {
@@ -658,10 +660,6 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
                 top: 10px;
                 left: 10px;
             }
-            .price {
-                font-size: 16px;
-                top: 25%;
-            } 
         }
 
     }
