--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -204,7 +204,8 @@
    				}
    				@media screen and (max-width: $screen-sm-max) {
    					margin-top: 5px;
-    				margin-bottom: -15px;
+    				margin-bottom: -5px;
+    				margin-left: 15px;
    				}
 			}
 
