remove some useless

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -28,7 +28,7 @@ body {
 // LUCAS  BELOW
 @import "various/colors";
 @import "various/homePro";
-@import "various/starRating";
+//@import "various/starRating";
 
 @import "temp";
 
