--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -431,13 +431,17 @@
                 height: 220px;
                 width: calc(100% - 240px);
                 margin-left: 20px;
-                .business-name > h3 {
-                    font-size: 2.1em;
-                    margin: 0 0 3px;
-                    letter-spacing: 2px;
-                    color: $darkgrey;
-                    text-transform: uppercase;
-                    font-weight: $semiBold;
+                .business-name > a {
+                    text-decoration: none;
+                    h3 {
+                        font-size: 2.1em;
+                        margin: 0 0 3px;
+                        letter-spacing: 2px;
+                        color: $darkgrey;
+                        text-transform: uppercase;
+                        font-weight: $semiBold;
+                        width: calc(100% - 75px);
+                    }
                 }
                 .business-address {
                     font-size: 1.4em;
@@ -452,6 +456,7 @@
                     }
                 }
                 .business-reviews {
+                    margin: 5px 0 5px 0;
                     div {
                         display: inline;                        
                     }
@@ -488,7 +493,7 @@
                     border: 1px solid $grey5;
                     color: $grey3;
                     font-weight: $regular;
-                    font-size: 1.9em;
+                    font-size: 1.6em;
                     border-radius: 4px;
                     margin-left: 10px;
                     text-transform: uppercase;
