--- a/public/scss/partials/_helpers.scss
+++ b/public/scss/partials/_helpers.scss
@@ -66,6 +66,17 @@
 	-ms-transform: 		 scale($factor);
 	-o-transform: 		 scale($factor);
 }
+@mixin flex-center() {
+    display: -webkit-flexbox;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    text-align: center;
+}
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
