--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -52,6 +52,9 @@ ul {
     list-style: none;
     padding-left: 0;
 }
+a {
+    color: $darkgrey;
+}
 #content {
     color: $font-color;
     background-color: $bg3;
