--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10207,6 +10207,10 @@ div.pagination {
     div.pagination a:hover {
       text-decoration: none; }
 
+@media screen and (max-width: 992px) {
+  .breadcrumb-main {
+    display: none !important; } }
+
 .breadcrumb {
   font-size: 1.4em;
   padding-left: 0; }
@@ -12219,6 +12223,9 @@ section.home-search .home-search-mobile {
   height: 255px; }
   .salon#content.free #carousel-salon .carousel-inner .item.placeholder {
     height: 255px; }
+    @media screen and (max-width: 767px) {
+      .salon#content.free #carousel-salon .carousel-inner .item.placeholder {
+        height: 130px; } }
 
 .salon#content {
   background-color: white; }
@@ -12226,6 +12233,9 @@ section.home-search .home-search-mobile {
     height: 255px; }
     .salon#content #carousel-salon.noPicture .carousel-inner .item.placeholder {
       height: 255px; }
+      @media screen and (max-width: 767px) {
+        .salon#content #carousel-salon.noPicture .carousel-inner .item.placeholder {
+          height: 130px; } }
   .salon#content h3 {
     color: #fe5b5f; }
   .salon#content .nav {
@@ -12237,6 +12247,9 @@ section.home-search .home-search-mobile {
         height: 65px; } }
   .salon#content #carousel-salon {
     position: relative; }
+    @media screen and (max-width: 767px) {
+      .salon#content #carousel-salon {
+        margin-top: 65px; } }
     .salon#content #carousel-salon .carousel-info {
       padding: 0;
       left: 0;
@@ -12256,7 +12269,8 @@ section.home-search .home-search-mobile {
         letter-spacing: 0px; }
         @media screen and (max-width: 767px) {
           .salon#content #carousel-salon .carousel-info h1 {
-            font-size: 2.1em; } }
+            font-size: 2.1em;
+            margin-bottom: 0; } }
       .salon#content #carousel-salon .carousel-info .profil-picture {
         z-index: 1;
         position: absolute;
@@ -12274,7 +12288,8 @@ section.home-search .home-search-mobile {
         width: 140px; }
         @media screen and (max-width: 767px) {
           .salon#content #carousel-salon .carousel-info .yelp-rating {
-            width: 80px; } }
+            width: 110px;
+            margin-top: 5px; } }
     .salon#content #carousel-salon .carousel-inner .item {
       height: 470px;
       background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)), url(../img/placeholder-salon.png) repeat-x;
@@ -12282,7 +12297,7 @@ section.home-search .home-search-mobile {
       background: none; }
       @media screen and (max-width: 767px) {
         .salon#content #carousel-salon .carousel-inner .item {
-          height: 320px; } }
+          height: 180px; } }
       .salon#content #carousel-salon .carousel-inner .item img, .salon#content #carousel-salon .carousel-inner .item a > img {
         margin: auto; }
       .salon#content #carousel-salon .carousel-inner .item.placeholder {
@@ -12295,6 +12310,9 @@ section.home-search .home-search-mobile {
         background-color: #838B95;
         width: 100%;
         height: 100%; }
+    @media screen and (max-width: 767px) {
+      .salon#content #carousel-salon .carousel-control {
+        display: none; } }
   .salon#content .global-reviews.desktop > a {
     float: right;
     text-align: right;
@@ -12319,14 +12337,15 @@ section.home-search .home-search-mobile {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 10px; }
     @media screen and (min-width: 767px) {
       .salon#content .global-reviews.mobile {
         display: none !important; } }
     .salon#content .global-reviews.mobile > img, .salon#content .global-reviews.mobile > a {
       float: left; }
     .salon#content .global-reviews.mobile > img {
-      height: 15px; }
+      height: 20px; }
     .salon#content .global-reviews.mobile > a {
       font-size: 1.4em;
       margin-left: 10px; }
@@ -12334,8 +12353,8 @@ section.home-search .home-search-mobile {
       float: left;
       height: inherit; }
       .salon#content .global-reviews.mobile .stars .star {
-        width: 15px;
-        margin: 0 1px 1px 0; }
+        width: 20px;
+        margin: 0 2px 1px 0; }
     .salon#content .global-reviews.mobile .num-reviews {
       color: white;
       font-size: 1.4em;
@@ -12376,34 +12395,24 @@ section.home-search .home-search-mobile {
       margin-left: -15px;
       position: relative;
       width: 100%;
-      padding-top: 16px; }
-      @media screen and (min-width: 768px) {
-        .salon#content .main-content section.salon-info.open-timetable {
-          margin-bottom: 100px; } }
+      padding-top: 10px; }
       .salon#content .main-content section.salon-info p {
         font-size: 1.6em;
         font-weight: 200;
-        margin-bottom: 5px; }
-      .salon#content .main-content section.salon-info div.timetable {
-        padding: 10px 15px 15px 15px;
-        background-color: #f8f8f8;
-        font-size: small;
-        margin-top: 20px;
-        font-weight: normal;
-        z-index: 1; }
-        .salon#content .main-content section.salon-info div.timetable span {
-          padding: 0; }
-        @media screen and (max-width: 480px) {
-          .salon#content .main-content section.salon-info div.timetable span.extra-small {
-            width: 25%; } }
+        margin-bottom: 0px; }
       @media screen and (max-width: 767px) {
         .salon#content .main-content section.salon-info .row {
           padding-left: 15px; } }
-      .salon#content .main-content section.salon-info .row:first-child {
+      @media screen and (min-width: 767px) {
+        .salon#content .main-content section.salon-info .row:first-child {
+          padding-left: 0px; } }
+      .salon#content .main-content section.salon-info .row:first-child .profilePicture {
         padding-left: 0px; }
         @media screen and (min-width: 1200px) {
           .salon#content .main-content section.salon-info .row:first-child .profilePicture {
             padding-left: 125px; } }
+      .salon#content .main-content section.salon-info .row .short-infos {
+        padding-left: 0; }
       @media screen and (min-width: 768px) {
         .salon#content .main-content section.salon-info .avis {
           float: right; } }
@@ -12423,56 +12432,68 @@ section.home-search .home-search-mobile {
         .salon#content .main-content section.salon-info .prix span.glyphicon, .salon#content .main-content section.salon-info .tags span.glyphicon {
           color: #595959;
           width: 1.4em; }
+      .salon#content .main-content section.salon-info .price-rating {
+        margin-bottom: 5px;
+        margin-left: -2px; }
+        @media screen and (max-width: 767px) {
+          .salon#content .main-content section.salon-info .price-rating {
+            margin-top: 0px;
+            margin-left: -2px;
+            margin-bottom: 10px; } }
       .salon#content .main-content section.salon-info .horaires {
-        margin: 20px 0 20px 0;
-        width: 100vw; }
+        font-size: 1.6em;
+        margin-bottom: 5px; }
         .salon#content .main-content section.salon-info .horaires a {
           display: inline-block;
           text-decoration: none;
-          color: black;
-          font-weight: bold;
-          position: relative; }
-          .salon#content .main-content section.salon-info .horaires a .title {
-            margin: 0;
-            display: inline-block;
-            font-size: 1.8em;
-            font-weight: bold;
-            border: solid #f8f8f8;
-            border-width: 2px;
-            padding: 2px 20px 2px 10px;
-            border-radius: 5px; }
-            @media screen and (max-width: 767px) {
-              .salon#content .main-content section.salon-info .horaires a .title {
-                font-size: 1.4em; } }
-            @media screen and (max-width: 350px) {
-              .salon#content .main-content section.salon-info .horaires a .title {
-                font-size: 1.3em; } }
-          .salon#content .main-content section.salon-info .horaires a .today {
-            border: 2px #f8f8f8 solid;
-            display: inline-block;
-            min-height: 100%;
-            background-color: #f8f8f8;
-            border-radius: 5px;
-            margin-left: -10px;
-            padding: 2px 20px 2px 20px;
-            font-size: 1.8em;
-            color: #666b74; }
-            @media screen and (max-width: 767px) {
-              .salon#content .main-content section.salon-info .horaires a .today {
-                font-size: 1.4em; } }
-            @media screen and (max-width: 350px) {
-              .salon#content .main-content section.salon-info .horaires a .today {
-                font-size: 1.3em; } }
-          .salon#content .main-content section.salon-info .horaires a .timetable {
-            position: absolute;
-            width: 200px;
-            top: -20px;
-            right: -195px;
-            border-radius: 5px; }
+          color: black; }
+        .salon#content .main-content section.salon-info .horaires .more {
+          color: #595959; }
+          .salon#content .main-content section.salon-info .horaires .more.empty {
+            color: #c4c4c4; }
+        .salon#content .main-content section.salon-info .horaires .timetable {
+          border-radius: 5px;
+          padding: 10px 15px 15px 15px;
+          background-color: #f8f8f8;
+          font-size: small;
+          font-weight: normal;
+          z-index: 1; }
+          @media screen and (min-width: 991px) {
+            .salon#content .main-content section.salon-info .horaires .timetable {
+              position: absolute;
+              width: 200px;
+              top: 0px;
+              right: -100px;
+              margin-top: 20px; } }
+          @media screen and (max-width: 991px) {
+            .salon#content .main-content section.salon-info .horaires .timetable {
+              position: relative;
+              width: 100%; } }
+          .salon#content .main-content section.salon-info .horaires .timetable span {
+            padding: 0;
+            color: #595959; }
+          @media screen and (max-width: 480px) {
+            .salon#content .main-content section.salon-info .horaires .timetable span.extra-small {
+              width: 30%; } }
+      .salon#content .main-content section.salon-info .breadcrumb-container {
+        margin-left: -15px; }
+        @media screen and (max-width: 767px) {
+          .salon#content .main-content section.salon-info .breadcrumb-container {
+            width: calc(100vw - 30px);
+            margin-left: 0px; } }
       .salon#content .main-content section.salon-info .breadcrumb {
-        background-color: #FFF; }
+        background-color: #FFF;
+        padding-left: 0; }
+        @media screen and (max-width: 767px) {
+          .salon#content .main-content section.salon-info .breadcrumb {
+            display: block; } }
+      .salon#content .main-content section.salon-info hr {
+        margin-top: -15px;
+        margin-bottom: 20px;
+        border: 0;
+        border-top: 1px dashed #777777;
+        width: calc(100vw - 30px); }
   .salon#content section.salon-content {
-    margin-top: 20px;
     margin-bottom: 70px; }
     @media screen and (min-width: 767px) {
       .salon#content section.salon-content .row {
