--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -7,6 +7,10 @@
         height: 255px;
         &.placeholder {
             height: 255px;
+
+            @media screen and (max-width: $screen-xs-max) {
+                height: 130px;
+            }
         }
     }
 }
@@ -24,6 +28,10 @@
         height: 255px;
         &.placeholder {
             height: 255px;
+
+            @media screen and (max-width: $screen-xs-max) {
+                height: 130px;
+            }
         }
     }
     h3 {
@@ -44,6 +52,9 @@
     background-color: white;
     #carousel-salon {
         position: relative;
+        @media screen and (max-width: $screen-xs-max) {
+            margin-top: 65px;
+        }
         .carousel-info {
             padding: 0;
             left: 0;
@@ -63,17 +74,13 @@
                         }
                     }
                 }
-                // &:nth-child(2) {
-                //     position: absolute;
-                //     right: 0;
-                //     bottom: 0;
-                // }
             }
             h1 {
                 color: white;
                 letter-spacing: 0px;
                 @media screen and (max-width: $screen-xs-max) {
                     font-size: 2.1em;
+                    margin-bottom: 0;
                     //margin: 0 0 10px 0;
                 }
             }
@@ -93,9 +100,9 @@
             }
             .yelp-rating {
                 width: 140px;
-                //margin-bottom: 15px;
                 @media screen and (max-width: $screen-xs-max) {
-                    width: 80px;
+                    width: 110px;
+                    margin-top: 5px;
                 }
             }
         }
@@ -106,7 +113,7 @@
             background: none;
 
             @media screen and (max-width: $screen-xs-max) {
-                height: 320px;
+                height: 180px;
             }
 
             img, a > img {
@@ -125,6 +132,11 @@
                 background-color: #838B95;
                 width: 100%;
                 height: 100%;
+            }
+        }
+        .carousel-control {
+            @media screen and (max-width: $screen-xs-max) {
+                display: none;
             }
         }
     }
@@ -158,12 +170,12 @@
                 @include hide;
             }
             @include flex-center; 
-
+            margin-bottom: 10px;
             > img, > a {
                 float: left;
             }
             > img {
-                height: 15px;
+                height: 20px;
             }
             > a {
                 font-size: 1.4em;
@@ -173,8 +185,8 @@
                 float: left;
                 height: inherit;
                 .star {
-                    width: 15px;
-                    margin: 0 1px 1px 0;
+                    width: 20px;
+                    margin: 0 2px 1px 0;
 
                 }
             }
@@ -203,48 +215,33 @@
         background-color: white;
         @include fullWidthBg($bg3);
         section.salon-info  {
-            &.open-timetable {
-                @media screen and (min-width: $screen-sm-min) {
-                    margin-bottom: 100px;
-                }
-            }
             p {
                 font-size: 1.6em;
                 font-weight: 200;
-                margin-bottom: 5px;
+                margin-bottom: 0px;
             }
             margin-left: -15px;
             position: relative;
             width: 100%;
-            padding-top: 16px;
+            padding-top: 10px;
 
-            div.timetable {
-                padding: 10px 15px 15px 15px;
-                background-color: #f8f8f8;
-                font-size: small;
-                margin-top: 20px;
-                font-weight: normal;
-                z-index: 1;
-                span {
-                    padding: 0;
-                }
-                span.extra-small {
-                    @media screen and (max-width: 480px) {
-                        width: 25%;
-                    }
-                }
-            }
             .row {
                 @media screen and (max-width: $screen-xs-max) {
                     padding-left: 15px;
                 }
                 &:first-child {
-                    padding-left: 0px;
+                    @media screen and (min-width: $screen-xs-max) {
+                        padding-left: 0px;
+                    }
                     .profilePicture {
+                        padding-left: 0px;
                         @media screen and (min-width: $screen-lg-min) {
                             padding-left: 125px;
                         }
                     }
+                }
+                .short-infos {
+                    padding-left: 0;
                 }
             }
             .avis {
@@ -274,65 +271,91 @@
                     color: $font-color; width: 1.4em;
                 }
             }
-            .horaires {
-                margin: 20px 0 20px 0;
-                width: 100vw;
-                    a { 
-                        display: inline-block;
-                        text-decoration: none;
-                        color: black;
-                        font-weight: bold;
-                        position: relative;
-                    .title {
-                        margin: 0;
-                        display: inline-block;
-                        font-size: 1.8em;
-                        @media screen and (max-width: $screen-xs-max) {
-                            font-size: 1.4em;
-                        }
-                        @media screen and (max-width: 350px) {
-                            font-size: 1.3em;
-                        }
-                        font-weight: bold;
-                        border: solid #f8f8f8;
-                        border-width: 2px;
-                        padding: 2px 20px 2px 10px;;
-                        border-radius: 5px;
-                    }
-                    .today {
-                        @media screen and (max-width: $screen-xs-max) {
-                            font-size: 1.4em;
-                        }
-                        @media screen and (max-width: 350px) {
-                            font-size: 1.3em;
-                        }
-                        border: 2px #f8f8f8 solid;
-                        display: inline-block;
-                        min-height: 100%;
-                        background-color: #f8f8f8;
-                        border-radius: 5px;
-                        margin-left: -10px;
-                        padding: 2px 20px 2px 20px;
-                        font-size: 1.8em;
-                        color: #666b74;
-                    }
-                    .timetable {
-                        position: absolute;
-                        width: 200px;
-                        top: -20px;
-                        right: -195px;
-                        border-radius: 5px;
-                    }
+
+            .price-rating {
+                margin-bottom: 5px;
+                margin-left: -2px;
+                @media screen and (max-width: $screen-xs-max) {
+                    margin-top: 0px;
+                    margin-left: -2px;
+                    margin-bottom: 10px;
                 }
             }
 
+            .horaires {
+                font-size: 1.6em;
+                margin-bottom: 5px;
+                a {
+                    display: inline-block;
+                    text-decoration: none;
+                    color: black;
+                }
+                .more {
+                    color: $font-color;
+                    &.empty {
+                        color: $grey;
+                    }
+                }
+                .timetable {
+                    @media screen and (min-width: $screen-sm-max) {
+                        position: absolute;
+                        width: 200px;
+                        top: 0px;
+                        right: -100px;
+                        margin-top: 20px;
+                    }
+                    @media screen and (max-width: $screen-sm-max) {
+                        position: relative;
+                        width: 100%;
+                    }
+                    border-radius: 5px;
+                    padding: 10px 15px 15px 15px;
+                    background-color: #f8f8f8;
+                    font-size: small;
+
+                    font-weight: normal;
+                    z-index: 1;
+                    span {
+                        padding: 0;
+                        color: $font-color;
+                    }
+                    span.extra-small {
+                        @media screen and (max-width: 480px) {
+                            width: 30%;
+                        }
+                    }
+                }
+            }
+            .breadcrumb-container {
+                margin-left: -15px;
+                @media screen and (max-width: $screen-xs-max) {
+                    width: calc(100vw - 30px);
+                    margin-left: 0px;
+                }
+            }
             .breadcrumb {
                 background-color: #FFF; 
+                padding-left: 0;
+
+                @media screen and (max-width: $screen-xs-max) {
+                    display: block;
+                }
+            }
+
+            hr {
+                margin-top: -15px;
+                margin-bottom: 20px;
+                border: 0;
+                border-top: 1px dashed #777777;
+                width: calc(100vw - 30px);
             }
         }
     }
     section.salon-content {
-        margin-top: 20px;
+        @media screen and (max-width: $screen-xs-max) {
+            //margin-top: 20px;
+        }
+        //margin-top: 20px;
         margin-bottom: 70px;
         .row {
             @media screen and (min-width: $screen-xs-max) {
