--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -68,7 +68,7 @@
             height: 63px;
             line-height: 49px;
             border-radius: 0;
-            color: #d6d6d6;
+            color: $lightgrey;
             font-size: 1.4em;
             font-family: $font-second;
             font-weight: $light;
@@ -187,7 +187,7 @@ section.how {
         height: auto;
         padding-bottom: 10px;
         h2.col-sm-3 {
-            color: $grey;
+            color: $lightgrey;
             text-transform: uppercase;
             font-size: 1.6em;
             letter-spacing: 1px;
@@ -197,6 +197,7 @@ section.how {
         }
         .row > div {
             height: 80px;
+            color: $lightgrey;
             object {
                 margin-top: -20px;
             }
@@ -204,7 +205,7 @@ section.how {
                 color: $lightgrey;
             }
             p {
-                color: $grey;
+                color: $lightgrey; 
                 letter-spacing: 0;
             }
             .how-txt {
